# nlp-pnp-robotic-arm

./: .gitignore  PickPlace.usd  PickPlace_old.usd  README.md  SPARC.usd  frames_2025-08-13_14.05.33.gv  h origin master --force
pick_place_chatbot_ui/: class_selector.py  cmd_bridge.py  index.html  launch.sh  llm_mapper.py  target_publisher.py
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/launch/: rviz.launch.py
src/arm_description/rviz/: default.rviz
src/arm_description/urdf/: manipulator.urdf.xacro  my_panda.urdf  my_panda_new.urdf  panda.urdf  panda_arm.xacro  panda_hand.xacro
src/arm_description/urdf/my_panda/: my_panda.usd
src/arm_description/urdf/my_panda/configuration/: my_panda_physics.usd
src/arm_description/urdf/new_panda/: new_panda.usd
src/arm_description/urdf/new_panda/configuration/: new_panda_physics.usd  new_panda_sensor.usd
src/arm_description/urdf/panda/: panda.usd
src/arm_description/urdf/panda/configuration/: panda_physics.usd
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  panda.srdf  ros2_controllers.yaml
src/moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_panda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
src/my_panda_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_panda_moveit_motion_interface/: CMakeLists.txt  package.xml
src/my_panda_moveit_motion_interface/src/: move_panda_custom_joints.cpp  move_panda_predef_pose.cpp
src/panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_moveit_config/config/: panda.ros2_control.xacro  panda.urdf.xacro  panda_hand.ros2_control.xacro
src/panda_moveit_config/launch/: demo.launch.py  gazebo.launch.py  moveit.rviz
src/panda_moveit_config/src/: move_arm_to_xyz.cpp  move_gripper.cpp  panda_pick_place.cpp  panda_pose.cpp
src/robot_description/meshes/: coupler.stl
src/robot_description/meshes/ur5/collision/: base.stl
src/robot_description/meshes/ur5/visual/: base.dae
src/robot_description/urdf/: ur5.urdf.xacro  ur5_joint_limited_robot.urdf  ur5_joint_limited_robot.urdf.xacro  ur5_robot.xacro  ur5_robotiq85_gripper.xacro
src/robot_description/urdf/camera/: camera.gazebo
src/robot_description/urdf/robotiq/: robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro
src/robot_description/urdf/ur5_joint_limited_robot/: ur5_joint_limited_robot.usd
src/robot_description/urdf/ur5_joint_limited_robot/configuration/: ur5_joint_limited_robot_physics.usd
src/ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5.ros2_control.xacro  ur5.srdf  ur5.urdf  ur5.urdf.xacro
src/ur5_moveit_config/config/ur5/configuration/: ur5_physics.usd
src/ur5_moveit_config/src/: ur5_pick_place_cpp_r.cpp  ur5_pick_place_cpp_s.cpp
src/yolov8_obb_msgs/: CMakeLists.txt
src/yolov8_obb_msgs/msg/: PickPlaceStatus.msg
src/yolov8obb_object_detection/: README.md  package.xml  requirement.txt  setup.cfg  setup.py
src/yolov8obb_object_detection/config/: yolov8_obb.rviz
src/yolov8obb_object_detection/launch/: yolov8_obb_launch.py
src/yolov8obb_object_detection/training_data/labels/: train.cache  val.cache
src/yolov8obb_object_detection/training_data/labels/train/: frame_1.txt  frame_10.txt  frame_11.txt  frame_12.txt  frame_13.txt  frame_14.txt  frame_15.txt  frame_16.txt  frame_17.txt  frame_18.txt  frame_19.txt  frame_2.txt  frame_20.txt  frame_21.txt  frame_22.txt  frame_23.txt  frame_24.txt  frame_25.txt  frame_26.txt  frame_27.txt  frame_28.txt  frame_29.txt  frame_3.txt  frame_30.txt  frame_31.txt  frame_32.txt  frame_33.txt  frame_4.txt  frame_5.txt  frame_6.txt  frame_7.txt  frame_8.txt  frame_9.txt
src/yolov8obb_object_detection/training_data/labels/train_original/: frame_1.txt  frame_1.xml  frame_10.txt  frame_10.xml  frame_11.txt  frame_11.xml  frame_12.txt  frame_12.xml  frame_13.txt  frame_13.xml  frame_14.txt  frame_14.xml  frame_15.txt  frame_15.xml  frame_16.txt  frame_16.xml  frame_17.txt  frame_17.xml  frame_18.txt  frame_18.xml  frame_19.txt  frame_19.xml  frame_2.txt  frame_2.xml  frame_20.txt  frame_20.xml  frame_21.txt  frame_21.xml  frame_22.txt  frame_22.xml  frame_23.txt  frame_23.xml  frame_24.txt  frame_24.xml  frame_25.txt  frame_25.xml  frame_26.txt  frame_26.xml  frame_27.txt  frame_27.xml  (+34 more)
src/yolov8obb_object_detection/training_data/labels/val/: frame_17.txt  frame_18.txt  frame_19.txt  frame_35.txt  frame_44.txt  frame_45.txt  frame_46.txt  frame_48.txt
src/yolov8obb_object_detection/training_data/labels/val_original/: frame_17.txt  frame_17.xml  frame_18.txt  frame_18.xml  frame_19.xml  frame_20.xml  frame_33.xml  frame_34.txt  frame_34.xml  frame_35.txt  frame_35.xml  frame_36.txt  frame_36.xml  frame_43.txt  frame_44.txt  frame_49.xml  frame_50.xml
src/yolov8obb_object_detection/yolov8obb_object_detection/: data_collection.py  yolov8_obb_publisher.py  yolov8_obb_subscriber.py
